--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -18,6 +18,12 @@
   width: 100%;
   transform: scale(1) translateY(0);
   transform-origin: 50% 16%;
+  transition: all 3s;
+}
+
+.card-container:hover {
+  transform: scale(1.15) translateY(-15px);
+  transform-origin: top;
 }
 
 .card-controls {
@@ -29,6 +35,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: opacity 500ms;
 }
 
 .card-container:hover .card-controls {
