--- a/src/components/CardList/styles.css
+++ b/src/components/CardList/styles.css
@@ -3,3 +3,25 @@
   margin: auto;
   text-align: start;
 }
+
+.card-enter {
+  opacity: 0;
+  transform: translateY(50px);
+}
+
+.card-enter-active {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 400ms;
+}
+
+.card-exit {
+  opacity: 1;
+}
+
+.card-exit-active {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  transition: all 400ms;
+}
